@@ -1,3 +1,6 @@
+20220606:
+ * Added prototype-test-deps-variations-tags to play with deps, variations, tags
+
 20220603:
  * Improved LLVM detection and installation
  * Added example of image corner detection
